@@ -40,9 +40,7 @@ static/class methods extensively, and these were only added in version
 defaults to an early version, you'll probably have to change the first
 line of the rdiff-backup script.  For instance, you could set it to:
 
-<pre>
-#/usr/bin/env python2.2
-</pre>
+<pre>#!/usr/bin/env python2.2</pre>
 </li>
 
 <a name="verbosity">
